# pet-delivery

./: .env.example  .gitignore  .make.env.example  CLAUDE.md  Makefile  docker-compose.yml  index.html
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  banners.py  brands.py  cart.py  categories.py  faqs.py  products.py  uploads.py  users.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: mongodb.py
backend/app/db/repositories/: banner_repo.py  base.py  brand_repo.py  category_repo.py  faq_repo.py  product_repo.py  user_repo.py
backend/app/middleware/: security_headers.py
backend/app/models/: banner.py  brand.py  category.py  faq.py  product.py  revoked_token.py  user.py
backend/app/schemas/: banner.py  brand.py  cart.py  category.py  faq.py  product.py  user.py
backend/app/services/: auth_service.py  banner_service.py  brand_service.py  cart_service.py  category_service.py  faq_service.py  product_service.py  upload_service.py
backend/tests/: conftest.py  test_api.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/hooks/: useAuth.ts  useCart.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  ProductDetailPage.tsx  ProductsPage.tsx  RegisterPage.tsx
frontend/src/store/: authStore.ts  cartStore.ts
frontend/src/styles/: global.css
frontend/src/types/: index.ts
(+92 files in other folders)
